--- a/package.json
+++ b/package.json
@@ -19,8 +19,16 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "@ngneat/hot-toast": "^2.0.2",
+    "@ngneat/overview": "^1.0.0",
+    "@pinata/sdk": "^1.1.20",
+    "bnc-onboard": "^1.25.0",
+    "ethers": "^5.2.0",
+    "nft.storage": "^3.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "web3": "^1.3.6",
+    "zksync": "^0.11.0-beta.7",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -42,5 +50,8 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
+  },
+  "browser": {
+    "fs": false
   }
 }
